--- a/public/index.html
+++ b/public/index.html
@@ -37,16 +37,12 @@
 
       <section class="new-tweet">
         <h2>Compose Tweet</h2>
-        <form id="tweetSubmit" action="/tweets" method="POST" Content-Type:"application/x-www-form-urlencoded">
+        <form id="tweetSubmit" action="/tweets" method="POST">
           <textarea id="tweetTextArea" name="text" placeholder="What are you humming about?"></textarea>
           <input type="submit" value="Tweet">
           <span class="counter">140</span>
         </form>
-
-
       </section>
-
-
 
       <section id="tweets-container">
         <!-- Created tweets are located here -->
